# CS-238

./: .gitattributes  README.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters_build_domain_model.yml  parameters_data_loader.yml
data/01_raw/: ChargePointAlarmDataItem.csv  ChargePointChargingSessionDataItem.csv  ChargePointStationOverviewDataItem.csv
notebooks/: P_s_o.csv  bd.ipynb  bd2.ipynb  data.pkl  for-sergio.ipynb  hmm.ipynb  hmm_model.pt  initial-estimates.pkl  scratchpad.ipynb  t_o.ipynb
src/cs_238/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/cs_238/pipelines/build_domain_model/: __init__.py  nodes.py  pipeline.py
src/cs_238/pipelines/data_loader/: __init__.py  nodes.py  pipeline.py
src/cs_238/pipelines/value_mapper/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_loader/: test_pipeline.py
