[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.13"
name = "cs_238"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "hmmlearn>=0.3.3",
    "ipython>=8.37.0",
    "kedro>=1.0.0",
    "kedro-datasets>=8.1.0",
    "kedro-viz>=2.1.1",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pomegranate>=1.1.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.3",
]

[project.scripts]
cs-238 = "cs_238.__main__:main"

[tool.kedro]
package_name = "cs_238"
project_name = "CS 238"
kedro_init_version = "1.0.0"
tools = "['Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "cs_238.__version__"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# show-fixes = true
select = ["ALL"]
ignore = [
    "ANN401",
    "COM812",
    "D103",
    "D104",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D404",
    "D415",
    "ERA001",
    "S101",
    "TC002",
]

[dependency-groups]
dev = ["ruff>=0.14.2"]

[tool.kedro_telemetry]
project_id = "e07a8f672d0046e6994d1b29c00769cc"
